<resources>
    <string name="app_name">THAMIZHI NOTES</string>
    <string name="thamizhi">THAMIZHI</string>
    <string name="notes">NOTES</string>
    <!--  Auth screen  -->
    <string name="log_into_your_account">Log into your account</string>
    <string name="please_enter_email_or_mobile_number">Please Enter Email or Mobile number</string>
    <string name="next">Next</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create your account</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="by_signing_up_you_are_accepting_the">By signing up, you are accepting the</string>
    <string name="enter_password">Enter Password</string>
    <string name="set_a_password">Set a password</string>
    <string name="by_logging_in_you_are_accepting_the">By Logging in, you are accepting the</string>
    <string name="type_your_password">Type your password</string>
    <string name="please_enter_the_code_sent_to_the">Please Enter the code sent to the</string>
    <string name="verify">Verify</string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="login_with_password">Login with password</string>
    <string name="you_are_all_set">You are all set !</string>
    <string name="tell_us_a_little_more_about_you">Tell us a little more about you</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="and_ready_set_go">And ready, set, go !</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="hey_friend">Hey Friend</string>
    <string name="enter_your_birday">Enter your birday</string>
    <string name="now_you_can">Now you can</string>
    <string name="enter_your_birthday_for">Enter your birthday for</string>
    <string name="personalized_learning">Personalized learning</string>
    <!--  snackBar  -->
    <string name="invalid">Invalid</string>
    <string name="Phone_number_is_not_valid">Phone number is not valid</string>
    <string name="the_email_id_is_invalid">The Email Id is invalid</string>
    <string name="password_length_7_letters">Password should contain more than 7 letters</string>
    <string name="error">Error</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="firstname_should_not_be_empty">FirstName should not be empty</string>
    <string name="lastname_should_not_be_empty">LastName should not be empty</string>
    <string name="please_enter_your_birthday">Please Enter your birthday</string>
    <string name="invalid_email_and_password">Invalid Email and password</string>
    <string name="error_while_creating_the_account">Error while creating the account</string>
</resources>