<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.dogood.thamizhinotes.ui.auth.password.LoginPasswordViewModel" />
    </data>
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        tools:context=".ui.auth.password.LoginPasswordFragment">
        <ScrollView
            style="@style/ScrollView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="20dp"
                    android:id="@+id/tv_title"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_app_logo"
                        style="@style/logo_style"
                        tools:ignore="ContentDescription" />
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/thamizhi"
                            android:padding="0dp"
                            android:layout_margin="0dp"
                            android:textSize="@dimen/text_size_h2"
                            android:textStyle="bold|italic" />
                        <TextView
                            android:layout_marginStart="30dp"
                            android:text="@string/notes"
                            android:padding="0dp"
                            android:layout_marginTop="-15dp"
                            android:textSize="@dimen/text_size_h2"
                            android:textColor="@color/app_button"
                            android:fontFamily="@font/poppins_bold"
                            android:textStyle="bold|italic"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/tv_title"
                    android:id="@+id/ll_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/log_into_your_account"
                        android:textSize="@dimen/text_size_h1_big"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:text="@string/type_your_password"
                        android:textColor="@color/grey_font"
                        android:textSize="@dimen/text_size_h6"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"/>
                    <EditText
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_background_white"
                        android:padding="10dp"
                        android:id="@+id/etPassword"
                        android:text="@={viewModel.password}"
                        android:textSize="@dimen/text_size_h6"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        tools:ignore="Autofill,LabelFor" />
                    <RelativeLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="120dp"
                        android:background="@drawable/curve_button"
                        android:layout_height="40dp">
                        <Button
                            android:visibility="visible"
                            android:fontFamily="@font/linetocircular"
                            android:layout_height="40dp"
                            android:layout_width="120dp"
                            android:background="@color/transparent"
                            android:id="@+id/auth_next"
                            android:textAllCaps="false"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_h3"
                            />
                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:visibility="gone"
                            android:theme="@style/progress_button_style"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                </LinearLayout>


                <RelativeLayout
                    android:layout_below="@id/ll_log"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/auth_buttons">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_logging_in_you_are_accepting_the"
                            android:textColor="@color/text_color"
                            android:gravity="center"
                            android:textSize= "@dimen/text_size_h6"
                            android:paddingStart="@dimen/toolbar_padding"
                            android:paddingEnd="@dimen/toolbar_padding"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_amp_conditions"
                            android:textColor="@color/app_button"
                            android:gravity="center"
                            android:textSize= "@dimen/text_size_h5"
                            android:paddingStart="@dimen/toolbar_padding"
                            android:paddingEnd="@dimen/toolbar_padding"/>
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>
