<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.dogood.thamizhinotes.ui.auth.cookie.NameViewModel" />
    </data>
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.cookie.NameFragment">
        <ScrollView
            style="@style/ScrollView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <LinearLayout
                    android:layout_margin="20dp"
                    android:id="@+id/tv_title"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_app_logo"
                        style="@style/logo_style"
                        tools:ignore="ContentDescription" />
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/thamizhi"
                            android:padding="0dp"
                            android:layout_margin="0dp"
                            android:textSize="@dimen/text_size_h2"
                            android:textStyle="bold|italic" />
                        <TextView
                            android:layout_marginStart="30dp"
                            android:text="@string/notes"
                            android:padding="0dp"
                            android:layout_marginTop="-15dp"
                            android:textSize="@dimen/text_size_h2"
                            android:textColor="@color/app_button"
                            android:fontFamily="@font/poppins_bold"
                            android:textStyle="bold|italic"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/tv_title"
                    android:id="@+id/ll_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/you_are_all_set"
                        android:textSize="@dimen/text_size_h1_big"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:text="@string/tell_us_a_little_more_about_you"
                        android:fontFamily="@font/linetocircular"
                        android:textColor="@color/grey_font"
                        android:textSize="@dimen/text_size_h5"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"/>
                    <RelativeLayout
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:layout_marginTop="20dp"
                            android:layout_width="150dp"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/et_background_white"
                            android:padding="10dp"
                            android:id="@+id/etFirstName"
                            android:textSize="@dimen/text_size_h6"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:text="@={viewModel.firstName}"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            tools:ignore="Autofill,LabelFor" />
                        <EditText
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="20dp"
                            android:layout_width="150dp"
                            android:layout_marginStart="5dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/et_background_white"
                            android:padding="10dp"
                            android:text="@={viewModel.lastName}"
                            android:id="@+id/etLastName"
                            android:textSize="@dimen/text_size_h6"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            tools:ignore="Autofill,LabelFor" />
                    </RelativeLayout>
                    <TextView
                        android:layout_marginTop="70dp"
                        android:text="@string/and_ready_set_go"
                        android:fontFamily="@font/linetocircular"
                        android:textColor="@color/grey_font"
                        android:textSize="@dimen/text_size_h6"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"/>
                    <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="120dp"
                        android:background="@drawable/curve_button"
                        android:layout_height="40dp">
                        <Button
                            android:visibility="visible"
                            android:fontFamily="@font/linetocircular"
                            android:layout_height="40dp"
                            android:layout_width="120dp"
                            android:background="@color/transparent"
                            android:id="@+id/authFinish"
                            android:textAllCaps="false"
                            android:text="@string/finish"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_h3"
                            />
                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:visibility="gone"
                            android:theme="@style/progress_button_style"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>
